# PersonalAI

./: .gitignore  README.md  gradle.properties  settings.gradle.kts
.claude/: settings.local.json
.github/workflows/: claude.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/personal/personalai/: ChatScreenTest.kt  HiltTestRunner.kt  ScheduledTasksScreenTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/personal/personalai/: MainActivity.kt  PersonalAIApplication.kt
app/src/main/java/com/personal/personalai/data/audio/: AudioRecorderImpl.kt
app/src/main/java/com/personal/personalai/data/datasource/ai/: LocalLlmDataSource.kt  MockAiDataSource.kt  OllamaDataSource.kt  OpenAiDataSource.kt  PromptTemplates.kt  ResponsesApiClient.kt  WhisperDataSource.kt
app/src/main/java/com/personal/personalai/data/geofence/: GeofenceManager.kt
app/src/main/java/com/personal/personalai/data/local/: PersonalAIDatabase.kt
app/src/main/java/com/personal/personalai/data/local/dao/: GeofenceTaskDao.kt  MemoryDao.kt  MessageDao.kt  ScheduledTaskDao.kt
app/src/main/java/com/personal/personalai/data/local/entity/: GeofenceTaskEntity.kt  MemoryEntity.kt  MessageEntity.kt  ScheduledTaskEntity.kt
app/src/main/java/com/personal/personalai/data/network/: CleartextNetworkPolicy.kt
app/src/main/java/com/personal/personalai/data/repository/: AiRepositoryImpl.kt  ChatRepositoryImpl.kt  GeofenceTaskRepositoryImpl.kt  MemoryRepositoryImpl.kt  MockAiRepositoryImpl.kt  OpenAiRepositoryImpl.kt  TaskRepositoryImpl.kt
app/src/main/java/com/personal/personalai/data/tools/: ToolRegistryImpl.kt
app/src/main/java/com/personal/personalai/data/tools/android/: AddCalendarEventTool.kt  DialPhoneTool.kt  GeocodeAddressTool.kt  GetBatteryLevelTool.kt  GetClipboardTool.kt  GetInstalledAppsTool.kt  GetLocationTool.kt  OpenAppTool.kt  OpenUrlTool.kt  ReadContactsTool.kt  SendMessageTool.kt  SendNotificationTool.kt  SendSmsTool.kt  SetAlarmTool.kt
app/src/main/java/com/personal/personalai/data/tools/files/: DeleteFileTool.kt  ListFilesTool.kt  ReadFileTool.kt  ShareFileTool.kt  WriteFileTool.kt
app/src/main/java/com/personal/personalai/data/tools/interaction/: AskUserTool.kt
app/src/main/java/com/personal/personalai/data/tools/management/: ForgetAllMemoriesTool.kt  ForgetMemoryTool.kt  SaveMemoryTool.kt  ScheduleTaskTool.kt  SetLocationTaskTool.kt
app/src/main/java/com/personal/personalai/data/tools/web/: WebSearchTool.kt
app/src/main/java/com/personal/personalai/di/: AppModule.kt
app/src/main/java/com/personal/personalai/domain/audio/: AudioRecorder.kt
app/src/main/java/com/personal/personalai/domain/model/: GeofenceTask.kt  Memory.kt  Message.kt  ScheduledTask.kt  SendMessageResult.kt  TaskInfo.kt
app/src/main/java/com/personal/personalai/domain/repository/: AiRepository.kt  ChatRepository.kt  GeofenceTaskRepository.kt  MemoryRepository.kt  TaskRepository.kt
app/src/main/java/com/personal/personalai/domain/tools/: AgentResponse.kt  AgentTool.kt  PermissionBroker.kt  ToolRegistry.kt  ToolResult.kt  UserInputBroker.kt
app/src/main/java/com/personal/personalai/domain/usecase/: AgentLoopUseCase.kt  ClearAllMemoriesUseCase.kt  CreateScheduledTaskUseCase.kt  DeleteMemoryUseCase.kt  DeleteScheduledTaskUseCase.kt  ForgetByTopicUseCase.kt  GetChatHistoryUseCase.kt  GetMemoriesUseCase.kt  GetScheduledTasksUseCase.kt  SaveMemoryUseCase.kt  SendMessageUseCase.kt  TranscribeAudioUseCase.kt  UpdateScheduledTaskUseCase.kt
app/src/main/java/com/personal/personalai/presentation/chat/: ChatScreen.kt  ChatUiState.kt  ChatViewModel.kt  PermissionRationale.kt
app/src/main/java/com/personal/personalai/presentation/locationtasks/: LocationTasksScreen.kt  LocationTasksViewModel.kt
app/src/main/java/com/personal/personalai/presentation/navigation/: AppNavGraph.kt  Screen.kt
app/src/main/java/com/personal/personalai/presentation/quickchat/: QuickChatActivity.kt  QuickChatScreen.kt  QuickChatViewModel.kt
app/src/main/java/com/personal/personalai/presentation/schedule/: ScheduledTasksScreen.kt  ScheduledTasksUiState.kt  ScheduledTasksViewModel.kt
app/src/main/java/com/personal/personalai/presentation/settings/: SettingsScreen.kt  SettingsUiState.kt  SettingsViewModel.kt
app/src/main/java/com/personal/personalai/receiver/: BootReceiver.kt  GeofenceBroadcastReceiver.kt
app/src/main/java/com/personal/personalai/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/personal/personalai/worker/: TaskReminderWorker.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-iw/: strings.xml
app/src/main/res/xml/: file_paths.xml  network_security_config.xml
app/src/test/java/com/personal/personalai/: ChatViewModelTest.kt  ScheduledTasksViewModelTest.kt  SendMessageUseCaseTest.kt
gradle/: libs.versions.toml
llm-engine/: CMakeLists.txt  build.gradle.kts  consumer-rules.pro  proguard-rules.pro
llm-engine/src/main/cpp/: llama-bridge.cpp  llama_jni.cpp
llm-engine/src/main/kotlin/com/llmengine/: GenerationParams.kt  LlamaJni.kt  LlmEngine.kt  LlmSession.kt  ModelDescriptor.kt  ModelManager.kt  Models.kt
localllm/: build.gradle.kts
localllm/src/main/java/com/personal/personalai/localllm/api/: LocalLlmMessage.kt  LocalLlmResponse.kt  LocalLlmTool.kt  LocalModel.kt
localllm/src/main/java/com/personal/personalai/localllm/download/: ModelDownloadManager.kt  ModelDownloadWorker.kt
localllm/src/main/java/com/personal/personalai/localllm/engine/: DynamicToolProvider.kt  LiteRtLlmEngine.kt
